manutenção em partes do html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section>
             <textarea class="input" cols="40" rows="6" placeholder="Digite seu texto..."></textarea>
             <div class="info">
-                <img src="/assets/!.png" class="img-alerta">
+                <img src="assets/!.png" class="img-alerta">
                 <h6 class="informacao">Apenas letras minúsculas e sem acento.</h6>
             </div>
             <div class="botoes">
