alterção no caminho das imagens

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section>
             <textarea class="input" cols="40" rows="6" placeholder="Digite seu texto..."></textarea>
             <div class="info">
-                <img src="assets/!.png" class="img-alerta">
+                <img src="./assets/!.png" class="img-alerta">
                 <h6 class="informacao">Apenas letras minúsculas e sem acento.</h6>
             </div>
             <div class="botoes">
@@ -38,7 +38,7 @@
             <div class="lado2">
                 <div class="textarea-container">
                     <textarea class="message" cols="15" rows="6"></textarea>
-                    <img src="/assets/boneco-removebg-preview.png" class="background-image" alt="Imagem de fundo">
+                    <img src="./assets/boneco-removebg-preview.png" class="background-image" alt="Imagem de fundo">
                 </div>
                 <p class="texto1">Nenhuma mensagem encontrada</p>
                 <p class="texto2"> Digite um texto que você deseja criptografar ou descriptografar.</p>
